@@ -1,3 +1,14 @@
+1998-10-12  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* README.en: Add explanation about `VERSION_SPECIFIC_LISPDIR'.
+
+	* Makefile (install): Add new arg `VERSION_SPECIFIC_LISPDIR'.
+	(elc): Likewise.
+
+	* FLIM-MK (config-flim): Refer to `VERSION_SPECIFIC_LISPDIR'.
+
+	* FLIM-CFG (VERSION_SPECIFIC_LISPDIR): New variable.
+
 1998-10-12  MORIOKA Tomohiko  <morioka@jaist.ac.jp>
 
 	* mel.el (mel-ccl-module): Require path-util when the running
